Server relative path used to cal /api/quote - hopefully will still work after deployment to server

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -23,7 +23,8 @@
                     document.getElementById("quote").innerHTML = quote.text;
                 }
             };
-            xhttp.open("GET", "http://localhost:8080/api/quote", true);
+
+            xhttp.open("GET", "/api/quote", true);
             xhttp.send();
         }
     </script>
